# RBLX_React_LSP_Backend

./: .gitignore  Cargo.toml  README.md  api_dump copy.json
lsp-server/: Cargo.toml  test_api_dump.json
lsp-server/oldSrc/: main.rs  metadata.rs  parser.rs
lsp-server/src/: api_manager.rs  api_parser.rs  file_diagnoser.rs  main.rs
rblx-react-lsp/: README.md  package.json
rblx-react-lsp/src/: extension.ts
src/: api_manager.rs  api_parser.rs  file_diagnoser.rs  file_manager.rs  main.rs
vscode-extension/: package-lock.json  package.json
vscode-extension/src/: extension.ts
