[package]
name = "React_LSP"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "rt-multi-thread", "sync"] }
tower-lsp = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"], default-features = false }
regex = "1.10.0"
lazy_static = "1.4.0"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization at cost of compile time
strip = true        # Strip symbols from binary
panic = "abort"     # Smaller panic implementation